--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
   "dependencies": {
     "@docusaurus/core": "3.8.1",
     "@docusaurus/preset-classic": "3.8.1",
+    "@giscus/react": "^3.1.0",
     "@mdx-js/react": "^3.0.0",
     "clsx": "^2.0.0",
+    "path-browserify": "^1.0.1",
     "prism-react-renderer": "^2.3.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-lazyimg-component": "^1.0.1",
+    "react-photo-view": "^1.2.7"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.8.1",
