--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "clear": "docusaurus clear",
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
-    "write-heading-ids": "docusaurus write-heading-ids"
+    "write-heading-ids": "docusaurus write-heading-ids",
+	"deploy-site": "node scripts/deploy-site.js site1",
+	"process-img": "node scripts/process-images.js"
   },
   "dependencies": {
     "@docusaurus/core": "3.8.1",
