--- a/vercel.json
+++ b/vercel.json
@@ -24,5 +24,16 @@
         "source": "/(.*)",
         "destination": "/index.html"
       }
+    ],
+    "headers": [
+      {
+        "source": "/assets/(.*)",
+        "headers": [
+          {
+            "key": "Cache-Control",
+            "value": "public, max-age=31536000, immutable"
+          }
+        ]
+      }
     ]
   }
