--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,13 @@
 {
+    "builds": [
+      {
+        "src": "package.json",
+        "use": "@vercel/node",
+        "config": {
+          "outputDirectory": "build"
+        }
+      }
+    ],
     "rewrites": [
       {
         "source": "/:locale/docs/:path*",
